--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.10.2024 07:03:10</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.10.2024 07:34:40</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -124,79 +124,10 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23450">Úterý 15. 10.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_23465">Středa 16. 10.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_23450">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Hovězí vývar </span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">s masem, zeleninou a nudlemi                              
-
-</p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
-<tr>
-<td class="volume">2ks</td>
-<td class="name">
-<span class="title cond">Plněné bramborové knedlíky </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s uzeným masem, zelí a vídeňská cibulka</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Maso dvou barev </span>
-<span class="allergen">(A: 1, 6, 9, 11)</span>
-<p class="desc">s rýží</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Penne ARRABIATA </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s vepřovou panenkou a parmazánem</p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Vepřová krkovice </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">se slaninou, fazolovými lusky a sázeným vejcem </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">160g</td>
-<td class="name">
-<span class="title cond">Filírovaný FLANK STEAK </span>
-<span class="allergen">(A: 1, 7)</span>
-<p class="desc">s pepřovou omáčkou a hranolky
-
-</p>
-</td>
-<td class="price cond">
-        199 Kč    </td>
-</tr>
-</table>
 <table class="list js-bookmark-block" id="day_23465" style="display:table;">
 <tr>
 <td class="volume"></td>
@@ -229,6 +160,38 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <td class="price cond">
         179 Kč    </td>
 </tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Smažený řízek z vepřové krkovice </span>
+<span class="allergen">(A: 1, 3, 7, 9, 10)</span>
+<p class="desc">s bramborovým salátem  </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">350g</td>
+<td class="name">
+<span class="title cond">Zapečené sýrové těstoviny </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s kuřecím masem
+
+</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí burger </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">se slaninou, čedarem, cibuli, rajčetem, hranolky a pikantní majonézou                                                   </p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
 </table>
 </div>
 </section>
@@ -252,7 +215,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="CSAntal"></section><a href="#top">&#8635;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-None
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Hovězí vývar, játrové knedlíčky</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Pražská vepřová kýta, houskové knedlíky</td><td>155 Kč</td></tr><tr><td>150g Smažený sýr eidam, vařené brambory, tatarka</td><td>149 Kč</td></tr><tr><td>200g Krůtí steak marinovaný v bazalce, americké brambory</td><td>165 Kč</td></tr><tr><td>300g Bramborové šišky, mák, cukr, máslo</td><td>115 Kč</td></tr><tr><td><h3>Buffet samoobslužný na váhu</h3></td><td> </td></tr><tr><td>Gratinované nachos s uzenou zeleninou</td><td> </td></tr><tr><td>Pečené fazole se salsou</td><td> </td></tr><tr><td>Fajita těstoviny</td><td> </td></tr><tr><td>Zapečená brokolice s čedarem</td><td> </td></tr><tr><td>Trhané kuře s fazolovou salsou</td><td> </td></tr><tr><td>Rozpečené pšeničné tortilly</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>domácí těstoviny připravované na objednávku 150g / 300g:</td><td>145 Kč</td></tr><tr><td>s houbami, smetanou, cibulí a česnekem, strouhaný parmezán</td><td> </td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
