--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.10.2024 14:04:26</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.10.2024 14:43:43</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -127,81 +127,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <section id="uCejpu"></section><a href="#top">&#8635;</a><tr><th>Šalanda U Čejpů<br><a href="https://www.ucejpu.cz/salanda/index.php#denni-menu">https://www.ucejpu.cz/salanda/index.php#denni-menu</a></th></tr>
 <tr>
 <td>
-<section class="daily-meals js-bookmarks-wrapper" id="daily-meals">
-<div class="inner">
-<h4 class="headline">POLEDNÍ MENU</h4>
-<div class="bookmarks cond">
-<div class="item js-bookmark active">
-<a class="link js-bookmark-switcher" href="#day_23498">Pátek 18. 10.</a>
-</div>
-</div>
-<table class="list js-bookmark-block" id="day_23498" style="display:table;">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Francouzská cibulačka                               </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">
-</p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Pikantní katův šleh</span>
-<span class="allergen">(A: 1, 10)</span>
-<p class="desc">s rýží (A: 1, 10)</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí prso se sušenými rajčaty, </span>
-<span class="allergen">(A: 1, 7)</span>
-<p class="desc">grilovaná zelenina                </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">350g</td>
-<td class="name">
-<span class="title cond">Zapečené sýrové těstoviny</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s kuřecím masem
-
-</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">200g</td>
-<td class="name">
-<span class="title cond">Sýrové koule,</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">vařené brambory a tatarská omáčka       </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí burger </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">se slaninou, čedarem, cibuli, rajčetem, hranolky a pikantní majonézou                                                   </p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-</table>
-</div>
-</section>
+None
 </td>
 </tr>
 </table>
